# cng-raster-formats

./: .gitignore  Dockerfile  README.md  cog_vs_zarr.ipynb  compose.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
notebooks/: 01_answers.ipynb  01_completed.ipynb  01_reading-cogs-the-hard-way.ipynb  02_answers.ipynb  02_completed.ipynb  02_reading-zarr-the-hard-way.ipynb  02_zarr.ipynb  03_completed.ipynb  03_free-range-artisanal-grass-fed-kerchunk.ipynb  03_freerange-artisanal-kerchunk.ipynb  README.md  reading-cogs-the-hard-way.ipynb
notes/: 01_cog  01_reading-cogs-the-hard-way.md
