[project]
name = "cng-raster-formats"
version = "0.1.0"
description = "Exploring Cloud-Native Geospatial Formats: A Hands-on Workshop for Raster Data"
readme = "README.md"
authors = [
    { name = "Jarrett Keifer", email = "jkeifer0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "fsspec>=2025.9.0",
    "griffine>=0.1.0",
    "jupyterlab>=4.4.6",
    "kerchunk>=0.2.9",
    "numcodecs>=0.16.3",
    "numpy>=2.3.4",
    "odc-geo>=0.4.10",
    "planetary-computer[adlfs]>=1.0.0",
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "shapely>=2.1.1",
    "xarray>=2025.10.1",
    "zarr>=3.1.3",
]

[project.urls]
Repository = 'https://github.com/jkeifer/cng-raster-formats'

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipynb-scrubber>=0.1.0",
]
